--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/aframe": "^1.0.2",
+    "@types/three": "^0.126.0",
     "ghpages": "0.0.3",
     "live-server": "^1.2.0",
     "ts-loader": "^8.0.11",
@@ -25,5 +26,7 @@
     "webvr",
     "vr"
   ],
-  "dependencies": {}
+  "dependencies": {
+    "three": "^0.126.1"
+  }
 }
