--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "aincraft",
-  "description": "Aincraft.",
+  "name": "vr-website",
+  "description": "VR Website.",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --watch",
-    "start": "live-server --port=7000",
+    "start": "webpack serve",
+    "build": "webpack",
     "deploy": "ghpages"
   },
   "devDependencies": {
     "@types/aframe": "^1.0.2",
-    "@types/three": "^0.126.0",
     "ghpages": "0.0.3",
-    "live-server": "^1.2.0",
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2",
     "webpack": "^5.10.0",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "keywords": [
     "aframe",
@@ -28,7 +27,11 @@
   ],
   "dependencies": {
     "aframe": "^1.2.0",
+    "ejs": "^3.1.6",
+    "ejs-webpack-loader": "^2.2.2",
+    "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
-    "three": "^0.126.1"
+    "html-webpack-injector": "^1.1.4",
+    "html-webpack-plugin": "^5.2.0"
   }
 }
